[package]
name = "uell"
description = "A bumpalo-based Unrolled Exponential Linked List"
version = "0.1.0"
authors = ["Kerollmops <renault.cle@gmail.com>"]
edition = "2018"

[dependencies]
bumpalo = { version = "3.5.0", features = ["boxed"] }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
